src/objects/AppLog__e.object
<CustomObject>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>ApexClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexMethod__c</fullName>
        <label>ApexMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationArea__c</fullName>
        <label>ApplicationArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>ExceptionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>LogType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotifyId__c</fullName>
        <label>NotifyId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifyMessage__c</fullName>
        <label>NotifyMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <label>TransactionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AppLog</label>
    <pluralLabel>AppLogs</pluralLabel>
    <!--publishBehavior>PublishAfterCommit</publishBehavior-->
</CustomObject>